feat(parsing)!: skip if no media when 'only media'
Signed-off-by: Rongrong <i@rong.moe>

--- a/src/i18n/ca.json
+++ b/src/i18n/ca.json
@@ -110,7 +110,7 @@
         "display_media": "Multimèdia",
         "display_media_-1": "Inhabilitat",
         "display_media_0": "Habilitat",
-        "display_media_1": "Només multimèdia, sense contingut (si hi ha cap multimèdia)",
+        "display_media_1": "Només multimèdia, sense contingut",
         "display_author": "Autor",
         "display_author_-1": "Inhabilitat",
         "display_author_0": "Automàtic",
