--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -110,7 +110,7 @@
         "display_media": "Medios",
         "display_media_-1": "Desactivado",
         "display_media_0": "Activado",
-        "display_media_1": "Sólo medios, sin contenido (si hay medios)",
+        "display_media_1": "Sólo medios, sin contenido",
         "display_author": "Autor",
         "display_author_-1": "Desactivado",
         "display_author_0": "Automático",
