--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -110,7 +110,7 @@
         "display_media": "Media",
         "display_media_-1": "Désactiver",
         "display_media_0": "Activer",
-        "display_media_1": "Uniquement des médias, pas de contenu (si média)",
+        "display_media_1": "Uniquement des médias, pas de contenu",
         "display_author": "Auteur",
         "display_author_-1": "Désactiver",
         "display_author_0": "Auto",
