--- a/src/i18n/id.json
+++ b/src/i18n/id.json
@@ -110,7 +110,7 @@
         "display_media": "Media",
         "display_media_-1": "Nonaktifkan",
         "display_media_0": "Aktifkan",
-        "display_media_1": "Hanya media, tanpa konten (jika media ada)",
+        "display_media_1": "Hanya media, tanpa konten",
         "display_author": "Penulis",
         "display_author_-1": "Nonaktifkan",
         "display_author_0": "Otomatis",
