--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -110,7 +110,7 @@
         "display_media": "メディア",
         "display_media_-1": "無効",
         "display_media_0": "有効",
-        "display_media_1": "メディアのみ、コンテンツなし (メディアがある場合)",
+        "display_media_1": "メディアのみ、コンテンツなし",
         "display_author": "著者",
         "display_author_-1": "無効",
         "display_author_0": "自動",
