--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -110,7 +110,7 @@
         "display_media": "Mídia",
         "display_media_-1": "Desabilitar",
         "display_media_0": "Habilitar",
-        "display_media_1": "Apenas mídia, sem conteúdo (se houver mídia)",
+        "display_media_1": "Apenas mídia, sem conteúdo",
         "display_author": "Autor",
         "display_author_-1": "Desabilitar",
         "display_author_0": "Automático",
