--- a/src/i18n/tr.json
+++ b/src/i18n/tr.json
@@ -110,7 +110,7 @@
         "display_media": "Medya",
         "display_media_-1": "Devre dışı bırak",
         "display_media_0": "Etkinleştir",
-        "display_media_1": "Yalnızca medya, içerik yok (herhangi bir medya varsa)",
+        "display_media_1": "Yalnızca medya, içerik yok",
         "display_author": "Yazar",
         "display_author_-1": "Devre dışı bırak",
         "display_author_0": "Otomatik",
