--- a/src/i18n/zh-Hans.json
+++ b/src/i18n/zh-Hans.json
@@ -110,7 +110,7 @@
         "display_media": "媒体",
         "display_media_-1": "禁用",
         "display_media_0": "启用",
-        "display_media_1": "仅媒体，无内容 (如有媒体)",
+        "display_media_1": "仅媒体，无内容",
         "display_author": "作者",
         "display_author_-1": "禁用",
         "display_author_0": "自动",
