--- a/src/i18n/zh-Hant.json
+++ b/src/i18n/zh-Hant.json
@@ -110,7 +110,7 @@
         "display_media": "媒體",
         "display_media_-1": "禁用",
         "display_media_0": "啟用",
-        "display_media_1": "僅媒體，無內容 (如有媒體)",
+        "display_media_1": "僅媒體，無內容",
         "display_author": "作者",
         "display_author_-1": "禁用",
         "display_author_0": "自動",
