chore(i18n): reorganize l10n files
Signed-off-by: Rongrong <i@rong.moe>

--- a/src/i18n/uz.json
+++ b/src/i18n/uz.json
@@ -1,7 +1,7 @@
 {
     "l10n_info": {
-        "lang_code": "",
-        "iso_639_code": "",
+        "lang_code": "uz",
+        "iso_639_code": "uz",
         "language_name": "",
         "lang_native_name": "",
         "select_lang_prompt": "",
