--- a/src/i18n/he.json
+++ b/src/i18n/he.json
@@ -1,7 +1,7 @@
 {
     "l10n_info": {
-        "lang_code": "",
-        "iso_639_code": "",
+        "lang_code": "he",
+        "iso_639_code": "he",
         "language_name": "",
         "lang_native_name": "",
         "select_lang_prompt": "",
