--- a/src/i18n/ko.json
+++ b/src/i18n/ko.json
@@ -1,7 +1,7 @@
 {
     "l10n_info": {
         "lang_code": "ko",
-        "iso_639_code": "",
+        "iso_639_code": "ko",
         "language_name": "Korean",
         "lang_native_name": "한국어",
         "select_lang_prompt": "언어를 선택하세요.",
