--- a/src/i18n/zh-Hans.json
+++ b/src/i18n/zh-Hans.json
@@ -208,7 +208,7 @@
         "user_state_description_0": "只能在开启多用户模式时使用 bot",
         "user_state_1": "用户",
         "user_state_description_1": "可以使用 bot",
-        "set_user_state_as": "将用户状态设置为",
+        "set_user_state_as": "更改用户状态为",
         "reset_sub_limit_to_default": "重置订阅数量限制为默认值",
         "set_sub_limit_to": "将订阅数量限制设置为…",
         "cmd_set_sub_limit_prompt_html": "命令用法: <code>/set_sub_limit 用户ID 订阅数量限制</code>\n\n注: <code>订阅数量限制</code> 必须是整数，<code>-1</code> 代表无限。"
