chore(i18n): update l10n for `ru` (#384)
- Fix the typos
- Remove bad language phrases
- The phrasing of the addresses has been corrected

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -5,7 +5,7 @@
         "language_name": "Russian",
         "lang_native_name": "Русский",
         "select_lang_prompt": "Пожалуйста, выберите язык.",
-        "welcome_prompt": "Добро пожаловать в RSS to Telegram бота.",
+        "welcome_prompt": "Добро пожаловать в RSS to Telegram Bot.",
         "rsstt_slogan": "RSS to Telegram Bot — Telegram RSS бот, заботящийся об удобстве чтения."
     },
     "l10n_sub_status": {
@@ -18,14 +18,14 @@
         "url_invalid": "Неверная ссылка",
         "network_error": "Ошибка сети",
         "internal_error": "Внутренняя ошибка",
-        "status_code_error": "Код состояния HTTP ошибка",
-        "uncaught_internal_error": "Какая-то внутренняя ошибка",
+        "status_code_error": "HTTP-ошибка",
+        "uncaught_internal_error": "Неожиданная внутренняя ошибка",
         "operation_timeout_error": "Время операции истекло",
-        "action_invalid": "Неверное действие",
+        "action_invalid": "Некорректное действие",
         "sub_limit_reached": "Достигнуто максимальное количество подписок",
-        "flood_wait_prompt": "Вы пишете слишком часто, бот достиг предела по частоте сообщений в Telegram. Пожалуйста, охладите трахание.",
-        "edit_conflict_prompt": "Вы пишете слишком часто, это привело к конфликту в сообщениях. Пожалуйста, охладите трахание.",
-        "callback_already_running_prompt": "Вы уже запросили другую команду. Пожалуйста, повторите после её завершения.",
+        "flood_wait_prompt": "Вы пишете слишком часто, бот достиг предела по частоте сообщений в Telegram. Пожалуйста, подождите.",
+        "edit_conflict_prompt": "Вы пишете слишком часто, это привело к конфликту в сообщениях. Пожалуйста, подождите.",
+        "callback_already_running_prompt": "Уже выполняется другая команда. Пожалуйста, повторите после её завершения.",
         "message_too_long_prompt": "Команда завершилась успешно, но возвращённое сообщение слишком длинное для отображения."
     },
     "l10n_permission_denied_reasons": {
@@ -40,7 +40,7 @@
         "permission_denied_input_command": "Пожалуйста, введите команду для продолжения…",
         "permission_denied_no_direct_use": "Эта команда не должна использоваться напрямую. Используйте %s вместо неё.",
         "promote_to_admin_prompt": "Если вы анонимный админ этой группы, пожалуйста, попросите администратора подтвердить вашу личность (никаких разрешений не требуется).",
-        "group_upgrade_needed_prompt": "К сожалению, ваша группа не была преобразована в супергруппу. Как правило, сервер Telegram должен автоматически выполнять это обновление в какой-то момент, но если нет, вам придется обновить его вручную, прежде чем вы сможете использовать бота.\nПожалуйста, выполните следующие действия:\n1. Перейдите к информации о группе, затем нажмите «Управление группой».\n2. Измените «История чата для новых участников» на «Видимый».\n3. Сохраните настройки видимости истории чата.\n4. Сохраните все настройки.\n5. (Необязательно) При необходимости вы можете снова изменить «История чата для новых участников» на «Скрытый».\n6. Теперь вы сможете использовать бот.",
+        "group_upgrade_needed_prompt": "К сожалению, ваша группа не была преобразована в супергруппу. Как правило, сервер Telegram должен автоматически выполнять это обновление в какой-то момент, но если нет, вам придется обновить его вручную, прежде чем вы сможете использовать бота.\nПожалуйста, выполните следующие действия:\n1. Перейдите к информации о группе, затем нажмите «Управление группой».\n2. Измените «История чата для новых участников» на «Видимый».\n3. Сохраните настройки видимости истории чата.\n4. Сохраните все настройки.\n5. (Необязательно) При необходимости вы можете снова изменить «История чата для новых участников» на «Скрытый».\n6. Теперь вы сможете использовать бота.",
         "sub_limit_reached_prompt": "Количество подписок достигло предела (%d/%d), установленного менеджером бота. Пожалуйста, удалите (/unsub) какие-нибудь подписки прежде, чем добавлять новые."
     },
     "l10n_misc": {
@@ -78,14 +78,14 @@
         "unsub_all_successful": "Успешно отписались ото всех подписок"
     },
     "l10n_cmd_import": {
-        "send_opml_prompt": "Пожалуйста, отправь мне OPML-файл для импортирования (расширение должно быть .opml).",
+        "send_opml_prompt": "Пожалуйста, отправьте OPML-файл для импортирования (расширение должно быть .opml).",
         "import_for_channel_or_group_prompt": "Если вы хотите импортировать подписки для вашего канала/группы, пожалуйста укажите в заголовке ID группы/канала (начинается с '-100') или @username.",
         "send_opml_reply_placeholder": "OPML-файл для импортирования (расширение должно быть .opml)",
         "fetch_file_failed": "Не удалось получить файл",
-        "opml_import_processing": "Если количество подписок большое или сервера подписок медленные, обновление может затянуться. Пока откинься на спинку и отдохни.",
+        "opml_import_processing": "Если количество подписок большое или сервера подписок медленные, обновление может затянуться. Пока откиньтесь на спинку и отдохните.",
         "opml_parse_error": "Ошибка при разборе OPML",
         "keep_subs_title_button": "Сохранить свои названия для импортированных подписок",
-        "delete_subs_title_button": "Очистить свои названия для импортированных подписок"
+        "delete_subs_title_button": "Удалить свои названия для импортированных подписок"
     },
     "l10n_cmd_set": {
         "set_choose_sub_prompt": "Пожалуйста, выберите подписки, которые вы хотите изменить.",
@@ -156,7 +156,7 @@
         "default_emoji_header_description": "%s значит, что подписка использует значение по умолчанию. Вы можете сменить его командой /set_default."
     },
     "l10n_monitor_warn": {
-        "feed_deactivated_warn": "100 раз к ряду не смогли получить данные по подписке. Подписка была приостановлена.\nЧтобы её возобновить, пожалуйста, воспользуйтесь командой /activate_subs."
+        "feed_deactivated_warn": "100 раз кряду не смогли получить данные по подписке. Подписка была приостановлена.\nЧтобы её возобновить, пожалуйста, воспользуйтесь командой /activate_subs."
     },
     "l10n_cmd_activate": {
         "choose_sub_to_be_activated": "Все подписки ниже приостановлены. Выберите подписку для возобновления.\nПосле возобновления, все обновления снова будут отправляться вам.",
@@ -186,7 +186,7 @@
         "set_hashtags_failure_too_many": "Слишком много хештегов. Пожалуйста, удалите парочку и пробуйте ещё раз."
     },
     "l10n_administration": {
-        "cmd_test_usage_prompt_html": "Использование команды: <code>/test ссылка_на_RSS номер_первого_материала(необязательно) номер_последнего_материала(необязательно)</code>",
+        "cmd_test_usage_prompt_html": "Использование команды: <code>/test ссылка_на_RSS номер_первого_материала (необязательно) номер_последнего_материала (необязательно)</code>",
         "cmd_set_option_usage_prompt_html": "Использование команды: <code>/set_option ключ значение</code>",
         "current_options": "Текущие настройки",
         "option_value_type": "Тип значения",
@@ -194,7 +194,7 @@
         "option_value_invalid": "Неверное значение, пожалуйста, проверьте тип",
         "option_updated": "Настройка обновлена",
         "cmd_user_info_usage_prompt_html": "Использование команды: <code>/user_info id_пользователя</code> или <code>/user_info @имя_пользователя</code>",
-        "user_not_found": "Пользователь не найден. Попробуй поискать по ID.",
+        "user_not_found": "Пользователь не найден. Используйте ID пользователя.",
         "user_info": "Информация о пользователе",
         "sub_count": "Количество подписок",
         "sub_limit": "Предел количества подписок",
@@ -231,6 +231,6 @@
         "cmd_description_test": "Тест (только для менеджеров бота)",
         "cmd_description_set_option": "Настроить бота (только для менеджеров бота)",
         "cmd_description_user_info": "Посмотреть/Изменить пользователя (только для менеджеров бота)",
-        "usage_in_channel_or_group_prompt_html": "<b>Использование в канале/группе:</b>\n1. Добавьте бота в свой канал/группу.\n2а. Напрямую отправлять команды <b>в канал/группу</b>.\n2б. Или же вы можете отправлять команды, как <code>/sub @username https://example.com</code> или <code>/sub -10010000000000 https://example.com</code> <b>в приватный чат с ботом</b>.\n(<code>@username</code> — это имя пользователя канала/группы, <code>@</code> требуется; <code>-10010000000000</code> — это идентификатор канала/группы, он должен начинаться с <code>-100</code>)"
+        "usage_in_channel_or_group_prompt_html": "<b>Использование в канале/группе:</b>\n1. Добавьте бота в свой канал/группу.\n2а. Напрямую отправлять команды <b>в канал/группу</b>.\n2б. Или же вы можете отправлять команды, как <code>/sub @username https://example.com</code> или <code>/sub -10010000000000 https://example.com</code> <b>в приватный чат с ботом</b>.\n(<code>@username</code> — это имя пользователя канала/группы, <code>@</code> обязателен; <code>-10010000000000</code> — это идентификатор канала/группы, он должен начинаться с <code>-100</code>)"
     }
 }
