fix(i18n): lang_code and iso_639_code
Signed-off-by: Rongrong <i@rong.moe>

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -1,7 +1,7 @@
 {
     "l10n_info": {
         "lang_code": "ar",
-        "iso_639_code": "",
+        "iso_639_code": "ar",
         "language_name": "Arabic",
         "lang_native_name": "العربية",
         "select_lang_prompt": "الرجاء اختيار اللغة.",
