--- a/src/i18n/fa.json
+++ b/src/i18n/fa.json
@@ -1,7 +1,7 @@
 {
     "l10n_info": {
-        "lang_code": "",
-        "iso_639_code": "",
+        "lang_code": "fa",
+        "iso_639_code": "fa",
         "language_name": "فارسی",
         "lang_native_name": "فارسی",
         "select_lang_prompt": "لطفا زبان خود را انتخاب کنید.",
