--- a/src/i18n/si.json
+++ b/src/i18n/si.json
@@ -1,7 +1,7 @@
 {
     "l10n_info": {
         "lang_code": "si",
-        "iso_639_code": "",
+        "iso_639_code": "si",
         "language_name": "Sinhala",
         "lang_native_name": "සිංහල",
         "select_lang_prompt": "කරුණාකර භාෂාවක් තෝරන්න.",
