--- a/src/i18n/zh-Hant.json
+++ b/src/i18n/zh-Hant.json
@@ -126,6 +126,9 @@
         "display_title_-1": "禁用",
         "display_title_0": "自動",
         "display_title_1": "啟用",
+        "display_entry_tags": "來自文章 (源條目) 的 hashtag",
+        "display_entry_tags_-1": "禁用",
+        "display_entry_tags_1": "啟用",
         "style": "樣式",
         "style_0": "",
         "style_1": "",
