--- a/src/i18n/it.json
+++ b/src/i18n/it.json
@@ -98,7 +98,7 @@
         "monitor_interval": "Monitorare l'intervallo",
         "send_mode": "Modalità di invio",
         "send_mode_-1": "Solamente titolo e sorgente",
-        "send_mode_0": "Automatico",
+        "send_mode_0": "Automatica",
         "send_mode_1": "Forza Telegraph",
         "send_mode_2": "Forza messaggi Telegram",
         "length_limit": "Limite lunghezza (solamente per la modalità automatica)",
@@ -124,7 +124,7 @@
         "display_via_1": "Titolo del feed e link visualizzati come titolo del post",
         "display_title": "Titolo del post",
         "display_title_-1": "Disabilita",
-        "display_title_0": "Auto",
+        "display_title_0": "Automatica",
         "display_title_1": "Abilita",
         "style": "Stile",
         "style_0": "",
