--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -137,7 +137,9 @@
         "length_limit_only_effective_if_send_mode_auto": "يكون حد الطول ساريًا فقط عندما يكون وضع الإرسال تلقائيًا.",
         "display_media_only_effective_if_send_mode_auto_and_telegram": "لن يعرض وضع الإرسال الحالي أبدًا الوسائط في رسائل Telegram.",
         "use_user_default_button": "استخدم الإفتراضي",
-        "read_formatting_settings_guidebook_html": "<a href=\"%s\">اقرأ دليل إعدادات التنسيق هنا.</a>"
+        "read_formatting_settings_guidebook_html": "<a href=\"%s\">اقرأ دليل إعدادات التنسيق هنا.</a>",
+        "display_entry_tags_-1": "تعطيل",
+        "display_entry_tags_1": "تمكين"
     },
     "l10n_cmd_set_default": {
         "set_user_default_description": "قم بتعيين الإعدادات الافتراضية للاشتراكات.\n\nستعود إعدادات الاشتراك غير المضبوطة إلى الإعدادات الموجودة في هذه الصفحة. مفيد إذا كنت تريد تعيين نفس الإعدادات لمعظم اشتراكاتك.",
