--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -138,8 +138,8 @@
         "display_media_only_effective_if_send_mode_auto_and_telegram": "El modo de envío actual nunca mostrará medios en los mensajes de Telegram.",
         "use_user_default_button": "Utiliza mi valor por defecto",
         "read_formatting_settings_guidebook_html": "<a href=\"%s\">Lee la guía de ajustes de formato aquí.</a>",
-        "display_entry_tags_-1": "Desactivar",
-        "display_entry_tags_1": "Activar",
+        "display_entry_tags_-1": "Desactivado",
+        "display_entry_tags_1": "Activado",
         "display_entry_tags": "Hashtags del post (entrada del feed)"
     },
     "l10n_cmd_set_default": {
