--- a/src/i18n/pl.json
+++ b/src/i18n/pl.json
@@ -126,52 +126,54 @@
         "display_title_-1": "Wyłącz",
         "display_title_0": "Automatyczny",
         "display_title_1": "Włącz",
-        "style": "",
+        "style": "Styl",
         "style_0": "",
         "style_1": "",
-        "set_custom_title_button": "",
-        "set_custom_interval_button": "",
-        "set_custom_hashtags_button": "",
-        "set_interval_prompt": "",
+        "set_custom_title_button": "Własny tytuł…",
+        "set_custom_interval_button": "Własny interwał (w minutach)…",
+        "set_custom_hashtags_button": "Własne hasztagi…",
+        "set_interval_prompt": "Wybierz interwał monitorowania.",
         "set_length_limit_prompt": "",
         "length_limit_only_effective_if_send_mode_auto": "",
         "display_media_only_effective_if_send_mode_auto_and_telegram": "",
-        "use_user_default_button": "",
-        "read_formatting_settings_guidebook_html": "",
-        "display_entry_tags": "Hashtagi z posta (wpisu kanału)"
+        "use_user_default_button": "Użyj moich domyślnych",
+        "read_formatting_settings_guidebook_html": "<a href=\"%s\">Przeczytaj tutaj przewodnik po ustawieniach formatowania.</a>",
+        "display_entry_tags": "Hashtagi z posta (wpisu kanału)",
+        "display_entry_tags_-1": "Wyłącz",
+        "display_entry_tags_1": "Włącz"
     },
     "l10n_cmd_set_default": {
         "set_user_default_description": "",
         "reset_all_button": "",
-        "reset_all_confirm_prompt": "",
-        "reset_all_confirm": "",
+        "reset_all_confirm_prompt": "Czy na pewno chcesz przywrócić ustawienia domyślne wszystkich subskrypcji?",
+        "reset_all_confirm": "Tak, zresetuj wszystkie subskrypcje do domyślnych",
         "reset_all_cancel": "Nie, anuluj",
-        "reset_all_successful": ""
+        "reset_all_successful": "Pomyślnie zresetowano wszystkie subskrypcje do wartości domyślnych"
     },
     "l10n_sub_info": {
-        "subscription_info": "",
-        "feed_title": "",
-        "subscription_title": "",
-        "feed_url": "",
-        "hashtags": "",
+        "subscription_info": "Informacje o subskrypcji",
+        "feed_title": "Tytuł kanału",
+        "subscription_title": "Własny tytuł",
+        "feed_url": "Adres URL kanału",
+        "hashtags": "Hasztagi",
         "default_emoji_header_description": ""
     },
     "l10n_monitor_warn": {
         "feed_deactivated_warn": ""
     },
     "l10n_cmd_activate": {
-        "choose_sub_to_be_activated": "",
-        "activate_all_subs": "",
-        "all_subs_are_activated": ""
+        "choose_sub_to_be_activated": "Poniższe subskrypcje są dezaktywowane, wybierz jedną, aby ją aktywować.\nPo aktywacji ich aktualizacje będą monitorowane.",
+        "activate_all_subs": "Aktywuj wszystkie moje subskrypcje",
+        "all_subs_are_activated": "Wszystkie subskrypcje zostały aktywowane."
     },
     "l10n_cmd_deactivate": {
         "choose_sub_to_be_deactivated": "",
-        "deactivate_all_subs": "",
-        "all_subs_are_deactivated": ""
+        "deactivate_all_subs": "Dezaktywuj wszystkie moje subskrypcje",
+        "all_subs_are_deactivated": "Wszystkie subskrypcje są dezaktywowane."
     },
     "l10n_cmd_set_title": {
         "cmd_set_title_usage_prompt_html": "",
-        "set_title_success": "",
+        "set_title_success": "Zmieniono niestandardowy tytuł subskrypcji na: ",
         "set_title_success_cleared": ""
     },
     "l10n_cmd_set_interval": {
