chore(i18n): update l10n for `it`
Translated using Weblate (it, Italian)
Currently translated at 100.0% (197 of 197 strings)

Co-authored-by: Manuel Tassi <mannivuwiki@gmail.com>
Co-authored-by: Hosted Weblate <hosted@weblate.org>
Translate-URL: https://hosted.weblate.org/projects/rss-to-telegram-bot/glossary/it/
Translation: RSS to Telegram Bot/RSS to Telegram Bot

--- a/src/i18n/it.json
+++ b/src/i18n/it.json
@@ -79,7 +79,7 @@
     },
     "l10n_cmd_import": {
         "send_opml_prompt": "Per favore inviatemi il file OPML da importare (il nome dell'estensione deve essere .opml).",
-        "import_for_channel_or_group_prompt": "Se desideri importare abbonamenti per il tuo canale/gruppo, compila il campo con l'ID del canale/gruppo (deve iniziare con '-100') o @username",
+        "import_for_channel_or_group_prompt": "Se desideri importare abbonamenti per il tuo canale/gruppo, compila il campo con l'ID del canale/gruppo (deve iniziare con '-100') o @username.",
         "send_opml_reply_placeholder": "Il file OPML da importare (l'estensione deve essere .opml)",
         "fetch_file_failed": "Recupero del file fallito",
         "opml_import_processing": "Se il numero di feed è elevato o i server dei feed sono lenti, il tempo di attesa potrebbe essere alto. Siediti e rilassati.",
