chore(i18n): update l10n for `uz`
Translated using Weblate (uz, Uzbek)
Currently translated at 7.1% (14 of 197 strings)

Co-authored-by: Akbar Ali <me@akbarali.uz>
Co-authored-by: Hosted Weblate <hosted@weblate.org>
Translate-URL: https://hosted.weblate.org/projects/rss-to-telegram-bot/glossary/uz/
Translation: RSS to Telegram Bot/RSS to Telegram Bot

--- a/src/i18n/uz.json
+++ b/src/i18n/uz.json
@@ -9,7 +9,7 @@
         "rsstt_slogan": ""
     },
     "l10n_sub_status": {
-        "no_subscription": "",
+        "no_subscription": "Sizda faol obunalar yo'q",
         "already_subscribed": "",
         "subscription_not_exist": ""
     },
