--- a/src/i18n/zh-Hant.json
+++ b/src/i18n/zh-Hant.json
@@ -25,22 +25,22 @@
         "sub_limit_reached": "訂閱數目達限",
         "flood_wait_prompt": "您的操作太頻繁，以至於機器人已超出 Telegram 的速率限制。請放慢速度。",
         "edit_conflict_prompt": "您的操作太頻繁，導致操作衝突。請放慢速度。",
-        "callback_already_running_prompt": "您已請求另一個命令。請在它完成後重試。",
-        "message_too_long_prompt": "該命令應該已經執行成功，但是返回消息太長，無法傳送。"
+        "callback_already_running_prompt": "您已請求另一個指令。請在它完成後重試。",
+        "message_too_long_prompt": "該指令應該已經執行成功，但是返回消息太長，無法傳送。"
     },
     "l10n_permission_denied_reasons": {
         "channel_or_group_not_found": "未能找尋到頻道/群組。",
-        "permission_denied_no_permission": "您沒有權限執行此命令。",
-        "permission_denied_not_bot_manager": "此命令只能由機器人管理員使用。",
-        "permission_denied_not_chat_admin": "此命令只能由該群組/頻道的管理員使用。",
-        "permission_denied_not_in_private_chat": "此命令只能在私人聊天中使用。",
+        "permission_denied_no_permission": "您沒有權限執行此指令。",
+        "permission_denied_not_bot_manager": "此指令只能由機器人管理員使用。",
+        "permission_denied_not_chat_admin": "此指令只能由該群組/頻道的管理員使用。",
+        "permission_denied_not_in_private_chat": "此指令只能在私人聊天中使用。",
         "permission_denied_not_member": "您不在此群組/頻道中，因此無法使用該機器人。",
         "permission_denied_bot_not_member": "該機器人不再在此群組/頻道中，因此不會在這裡工作。",
         "permission_denied_switch_pm": "在與機器人的私人聊天中繼續…",
-        "permission_denied_input_command": "請輸入命令以繼續…",
-        "permission_denied_no_direct_use": "不應直接使用此命令。請改用 %s 。",
+        "permission_denied_input_command": "請輸入指令以繼續…",
+        "permission_denied_no_direct_use": "不應直接使用此指令。請改用 %s 。",
         "promote_to_admin_prompt": "如果您是該群組的匿名管理員，請將機器人提升為管理員 (無需權限)，以授權機器人驗證您的身份。",
-        "group_upgrade_needed_prompt": "糟糕，您的群組尚未升級為超級群組。通常，Telegram 伺服器應在某個時候自動執行此升級，但如果沒有，則必須手動升級它，然後才能使用機器人。\n請按照以下步驟操作：\n1. 轉到群組資訊，然後按兩下「管理組」。\n2. 將「新成員的聊天記錄」更改為「可見」。\n3. 保存聊天記錄可見性設置。\n4. 保存所有設置。\n5. (可選) 如果需要，您可以再次將「新成員的聊天記錄」更改為「隱藏」。\n6. 現在您應該能夠使用機器人了。",
+        "group_upgrade_needed_prompt": "糟糕，您的群組尚未升級為超級群組。通常，Telegram 伺服器應在某個時候自動執行此升級，但如果沒有，則必須手動升級它，然後才能使用機器人。\n請按照以下步驟操作：\n1. 轉到群組資訊，然後按兩下「管理組」。\n2. 將「新成員的聊天記錄」更改為「可見」。\n3. 儲存聊天記錄可見性設定。\n4. 儲存所有設定。\n5. (可選) 如果需要，您可以再次將「新成員的聊天記錄」更改為「隱藏」。\n6. 現在您應該能夠使用機器人了。",
         "sub_limit_reached_prompt": "訂閱的數量已經到達機器人管理員實施的限額 (%d/%d)。在進一步新增訂閱前，請先退訂 (/unsub) 一些訂閱。"
     },
     "l10n_misc": {
@@ -53,10 +53,10 @@
         "unsubscribe": "退訂訂閱",
         "subscription_list": "訂閱清單",
         "processing": "正在處理中，請稍等片刻…",
-        "canceled_by_user": "由用戶取消。",
+        "canceled_by_user": "由使用者取消。",
         "n_subscriptions_in_total": "共有 %d 個訂閱",
-        "other_settings_button": "其他設置…",
-        "user": "用戶",
+        "other_settings_button": "其他設定…",
+        "user": "使用者",
         "channel": "頻道",
         "group": "群組"
     },
@@ -93,7 +93,7 @@
         "status_activated": "啟動",
         "status_deactivated": "停用",
         "notification": "通知",
-        "notification_normal": "常規",
+        "notification_normal": "一般",
         "notification_muted": "靜音",
         "monitor_interval": "監視間隔",
         "send_mode": "傳送方式",
@@ -104,30 +104,30 @@
         "length_limit": "長度限制 (僅限自動模式)",
         "length_limit_unlimited": "無限",
         "link_preview": "連結預覽",
-        "link_preview_-1": "禁用",
+        "link_preview_-1": "停用",
         "link_preview_0": "自動",
         "link_preview_1": "啟用",
         "display_media": "媒體",
-        "display_media_-1": "禁用",
+        "display_media_-1": "停用",
         "display_media_0": "啟用",
         "display_media_1": "僅媒體，無內容",
         "display_author": "作者",
-        "display_author_-1": "禁用",
+        "display_author_-1": "停用",
         "display_author_0": "自動",
         "display_author_1": "啟用",
         "display_via": "來源",
         "display_via_-4": "無源標題，裸 URL 附於尾部",
         "display_via_-3": "無源標題，連結顯示為文章標題",
-        "display_via_-2": "完全禁用",
+        "display_via_-2": "完全停用",
         "display_via_-1": "無源標題，超連結附於尾部",
         "display_via_0": "源標題和連結",
         "display_via_1": "源標題和顯示為文章標題的連結",
         "display_title": "文章標題",
-        "display_title_-1": "禁用",
+        "display_title_-1": "停用",
         "display_title_0": "自動",
         "display_title_1": "啟用",
         "display_entry_tags": "來自文章 (源條目) 的 hashtag",
-        "display_entry_tags_-1": "禁用",
+        "display_entry_tags_-1": "停用",
         "display_entry_tags_1": "啟用",
         "style": "樣式",
         "style_0": "",
@@ -136,14 +136,14 @@
         "set_custom_interval_button": "自訂間隔 (以分鐘為單位)…",
         "set_custom_hashtags_button": "自訂 hashtag…",
         "set_interval_prompt": "請選擇監視間隔。",
-        "set_length_limit_prompt": "請選擇長度限制。\n\n如果文章的長度超過限制或無法在單個消息中傳送，則將通過 Telegraph 傳送。\n如果通過 Telegraph 傳送失敗，則只會傳送其標題和來源。",
+        "set_length_limit_prompt": "請選擇長度限制。\n\n如果文章的長度超過限制或無法在單個消息中傳送，則將透過 Telegraph 傳送。\n如果透過 Telegraph 傳送失敗，則只會傳送其標題和來源。",
         "length_limit_only_effective_if_send_mode_auto": "長度限制僅在傳送方式為自動時有效。",
         "display_media_only_effective_if_send_mode_auto_and_telegram": "現在的傳送方式永遠不會在 Telegram 消息中顯示媒體。",
         "use_user_default_button": "使用我的預設值",
-        "read_formatting_settings_guidebook_html": "<a href=\"%s\">在這裡閱讀格式設置手冊。</a>"
+        "read_formatting_settings_guidebook_html": "<a href=\"%s\">在這裡閱讀格式設定手冊。</a>"
     },
     "l10n_cmd_set_default": {
-        "set_user_default_description": "訂製訂閱的預設設置。\n\n訂閱中尚未修改過的設置會退回到本頁上的設置。如果您想對許多訂閱使用同樣的設置，這就很有用。",
+        "set_user_default_description": "訂製訂閱的預設設定。\n\n訂閱中尚未修改過的設定會退回到本頁上的設定。如果您想對許多訂閱使用同樣的設定，這就很有用。",
         "reset_all_button": "重設所有訂閱到預設值",
         "reset_all_confirm_prompt": "是否確實要重設所有訂閱到預設值？",
         "reset_all_confirm": "是，重設所有訂閱到預設值",
@@ -156,10 +156,10 @@
         "subscription_title": "自訂標題",
         "feed_url": "源 URL",
         "hashtags": "Hashtag",
-        "default_emoji_header_description": "%s 意味著訂閱正使用預設的設置。您可以使用 /set_default 來改變它們。"
+        "default_emoji_header_description": "%s 意味著訂閱正使用預設的設定。您可以使用 /set_default 來改變它們。"
     },
     "l10n_monitor_warn": {
-        "feed_deactivated_warn": "監視任務連續 100 次失敗。您對該 RSS 源的訂閱已停用。\n要重新啟動它，請使用 /activate_subs 命令。"
+        "feed_deactivated_warn": "監視任務連續 100 次失敗。您對該 RSS 源的訂閱已停用。\n要重新啟動它，請使用 /activate_subs 指令。"
     },
     "l10n_cmd_activate": {
         "choose_sub_to_be_activated": "以下訂閱已停用，請選擇要啟動的訂閱。\n啟動後，將監視其更新。",
@@ -172,52 +172,52 @@
         "all_subs_are_deactivated": "所有訂閱均已停用。"
     },
     "l10n_cmd_set_title": {
-        "cmd_set_title_usage_prompt_html": "命令用法: <code>/set_title 訂閱編號 標題</code>\n\n註: 省略 <code>標題</code> 以清除自訂標題 (僅當先前設置過才能清除，否則就會收到此提示)。",
+        "cmd_set_title_usage_prompt_html": "指令用法: <code>/set_title 訂閱編號 標題</code>\n\n註: 省略 <code>標題</code> 以清除自訂標題 (僅當先前設定過才能清除，否則就會收到此提示)。",
         "set_title_success": "訂閱的自訂標題已修改為: ",
         "set_title_success_cleared": "訂閱的自訂標題已清除。"
     },
     "l10n_cmd_set_interval": {
-        "cmd_set_interval_usage_prompt_html": "命令用法: <code>/set_interval 訂閱編號 監視間隔</code>\n\n註: <code>監視間隔</code> 必須是正整數，單位為分鐘 (無需包含單位)。",
+        "cmd_set_interval_usage_prompt_html": "指令用法: <code>/set_interval 訂閱編號 監視間隔</code>\n\n註: <code>監視間隔</code> 必須是正整數，單位為分鐘 (無需包含單位)。",
         "set_interval_success_html": "訂閱的監視間隔已修改為 <b>%d 分鐘</b>。",
         "set_default_interval_success_html": "預設的監視間隔已修改為 <b>%d 分鐘</b>。",
         "set_interval_failure_too_small_html": "監視間隔必須大於 <b>%d 分鐘</b>。"
     },
     "l10n_cmd_set_hashtags": {
-        "cmd_set_hashtags_usage_prompt_html": "命令用法: <code>/set_hashtags 訂閱編號 #hashtag1 #hashtag2 …</code>\n\n註: 如果沒有 hashtag 提供，已存在的 hashtag 就會被清除 (僅當先前設置過才能清除，否則就會收到此提示)。",
+        "cmd_set_hashtags_usage_prompt_html": "指令用法: <code>/set_hashtags 訂閱編號 #hashtag1 #hashtag2 …</code>\n\n註: 如果沒有 hashtag 提供，已存在的 hashtag 就會被清除 (僅當先前設定過才能清除，否則就會收到此提示)。",
         "set_hashtags_success_html": "訂閱的自訂 hashtag 已修改為: ",
         "set_hashtags_success_cleared": "訂閱的自訂 hashtag 已清除。",
         "set_hashtags_failure_too_many": "Hashtag 太多，請刪除一些後重試。"
     },
     "l10n_administration": {
-        "cmd_test_usage_prompt_html": "命令用法: <code>/test RSS_URL 條目編號起點(可選) 條目編號終點(可選)</code>",
-        "cmd_set_option_usage_prompt_html": "命令用法: <code>/set_option 鍵 值</code>",
-        "current_options": "當前選項",
+        "cmd_test_usage_prompt_html": "指令用法: <code>/test RSS_URL 條目編號起點(可選) 條目編號終點(可選)</code>",
+        "cmd_set_option_usage_prompt_html": "指令用法: <code>/set_option 鍵 值</code>",
+        "current_options": "目前選項",
         "option_value_type": "值類型",
         "option_key_invalid": "選項鍵無效",
         "option_value_invalid": "選項值無效，請檢查其類型",
         "option_updated": "選項已更新",
-        "cmd_user_info_usage_prompt_html": "命令用法: <code>/user_info 用戶ID</code> 或 <code>/user_info @username</code>",
-        "user_not_found": "未能找尋到用戶，請使用用戶 ID。",
-        "user_info": "用戶資訊",
+        "cmd_user_info_usage_prompt_html": "指令用法: <code>/user_info 使用者ID</code> 或 <code>/user_info @username</code>",
+        "user_not_found": "未能找尋到使用者，請使用使用者 ID。",
+        "user_info": "使用者資訊",
         "sub_count": "訂閱數目",
         "sub_limit": "訂閱限額",
         "sub_limit_unlimited": "無限額",
         "sub_limit_default": "預設",
         "participant_count": "成員數目",
-        "user_state": "用戶狀態",
+        "user_state": "使用者狀態",
         "user_state_-1": "被封鎖",
         "user_state_description_-1": "不能使用機器人",
         "user_state_0": "訪客",
-        "user_state_description_0": "只在多用戶模式啟用時可使用機器人",
-        "user_state_1": "用戶",
+        "user_state_description_0": "只在多使用者模式啟用時可使用機器人",
+        "user_state_1": "使用者",
         "user_state_description_1": "可使用機器人",
-        "set_user_state_as": "更改用戶狀態為",
+        "set_user_state_as": "更改使用者狀態為",
         "reset_sub_limit_to_default": "重設訂閱限額為預設值",
-        "set_sub_limit_to": "設置訂閱限額為…",
-        "cmd_set_sub_limit_prompt_html": "命令用法: <code>/set_sub_limit 用戶ID 訂閱限額</code>\n\n註: <code>訂閱限額</code> 必須是正整數，<code>-1</code> 表示無限額。"
+        "set_sub_limit_to": "設定訂閱限額為…",
+        "cmd_set_sub_limit_prompt_html": "指令用法: <code>/set_sub_limit 使用者ID 訂閱限額</code>\n\n註: <code>訂閱限額</code> 必須是正整數，<code>-1</code> 表示無限額。"
     },
     "l10n_cmd_descriptions": {
-        "commands": "命令",
+        "commands": "指令",
         "cmd_description_sub": "新增訂閱",
         "cmd_description_unsub": "退訂訂閱",
         "cmd_description_unsub_all": "退訂所有訂閱",
@@ -230,10 +230,10 @@
         "cmd_description_deactivate_subs": "停用訂閱",
         "cmd_description_version": "檢查機器人版本",
         "cmd_description_lang": "選擇語言",
-        "cmd_description_help": "查看幫助",
+        "cmd_description_help": "查看說明",
         "cmd_description_test": "測試 (僅限機器人管理員)",
-        "cmd_description_set_option": "設置機器人選項 (僅限機器人管理員)",
-        "cmd_description_user_info": "查看/更改用戶資訊 (僅限機器人管理員)",
-        "usage_in_channel_or_group_prompt_html": "<b>在頻道/群組中的用法:</b>\n1. 將機器人新增至頻道/群組中。\n2a. 直接<b>在頻道/群組中</b>傳送命令。\n2b. 或者，您可以<b>在和機器人的私人聊天中</b>像這樣傳送命令: <code>/sub @username https://example.com</code> 或者 <code>/sub -10010000000000 https://example.com</code>。\n(<code>@username</code> 是頻道/群組的使用者名稱，<code>@</code> 是不可或缺的; <code>-10010000000000</code> 是頻道/群組的 ID，且必須以 <code>-100</code> 為開頭)"
+        "cmd_description_set_option": "設定機器人選項 (僅限機器人管理員)",
+        "cmd_description_user_info": "查看/更改使用者資訊 (僅限機器人管理員)",
+        "usage_in_channel_or_group_prompt_html": "<b>在頻道/群組中的用法:</b>\n1. 將機器人新增至頻道/群組中。\n2a. 直接<b>在頻道/群組中</b>傳送指令。\n2b. 或者，您可以<b>在和機器人的私人聊天中</b>像這樣傳送指令: <code>/sub @username https://example.com</code> 或者 <code>/sub -10010000000000 https://example.com</code>。\n(<code>@username</code> 是頻道/群組的使用者名稱，<code>@</code> 是不可或缺的; <code>-10010000000000</code> 是頻道/群組的 ID，且必須以 <code>-100</code> 為開頭)"
     }
 }
