--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -235,5 +235,27 @@
         "cmd_description_set_option": "Set bot options (bot manager only)",
         "cmd_description_user_info": "View/modify user info (bot manager only)",
         "usage_in_channel_or_group_prompt_html": "<b>Usage in channel/group:</b>\n1. Add the bot to your channel/group.\n2a. Directly send commands <b>in the channel/group</b>.\n2b. Or alternatively, you can send commands like <code>/sub @username https://example.com</code> or <code>/sub -10010000000000 https://example.com</code> <b>in the private chat with the bot</b>.\n(<code>@username</code> is the channel/group's username, <code>@</code> is required; <code>-10010000000000</code> is the channel/group's ID, it must start with <code>-100</code>)"
+    },
+    "domain": {
+        "not_authorized": "This command can only be used by bot administrators.",
+        "domain_required": "Please provide a domain name.",
+        "url_required": "Please provide a URL to analyze.",
+        "invalid_domain": "Invalid domain format.",
+        "settings_menu": "Domain settings menu for: {domain}\n\nUse the following commands:\n/set_domain_hashtags [domain] [hashtags]\n/set_domain_filters [domain] [filters]\n/set_domain_template [domain] [template]",
+        "settings_not_found": "No settings found for domain: {domain}",
+        "settings_removed": "Domain settings removed for: {domain}",
+        "no_settings": "No domain-specific settings configured.",
+        "settings_list_header": "Configured Domain Settings:",
+        "domain_info": "Domain Information: {domain}",
+        "job_site": "Job/Employment Website",
+        "news_site": "News Website",
+        "general_site": "General Website",
+        "custom_settings": "Custom Settings",
+        "no_custom_settings": "No custom settings configured.",
+        "title_template": "Title Template",
+        "hashtags": "Hashtags",
+        "send_mode": "Send Mode",
+        "author_display": "Author Display",
+        "suggested_hashtags": "Suggested Hashtags"
     }
 }
